# Hanns

./: .gitignore  AGENTS.md  BENCH-024_SIFT1M_HNSW_20260303_081158.md  BENCH-024_SIFT1M_HNSW_20260303_084149.md  BENCH-024_SIFT1M_HNSW_20260303_101249.md  BENCH-024_SIFT1M_HNSW_20260303_140714.md  BENCH-024_SIFT1M_HNSW_20260304_090649.md  BENCH-024_SIFT1M_HNSW_20260304_093726.md  BENCH-024_SIFT1M_HNSW_20260305_003352.md  BENCH-024_SIFT1M_HNSW_20260305_013830.md  BENCH-038_REPORT.md  BENCH-049_PROGRESS.md  BENCH-050_SIFT1M_ALL_INDEXES.md  BENCH-051_DISKANN_1M_PROGRESS.md  BENCHMARK.md  BENCHMARK_REPORT_2026-03-01.md  BENCHMARK_vs_CPP.md  CLAUDE.md  CMakeLists.txt  CRON_REPORT.md  CRON_REPORT_20260304_094000.md  Cargo.toml  DEV_REVIEW_20260305.md  DEV_REVIEW_20260305_051500.md  DEV_REVIEW_20260305_0902.md  DEV_REVIEW_20260305_111500.md  DEV_ROADMAP.md  ELKAN_IMPLEMENTATION.md  GAP_ANALYSIS.md  OPT012_SIMD_OPTIMIZATION_REPORT.md  README.md  RELEASE_NOTES.md  RESULT_BENCH-001.md  RESULT_BENCH-005.md  RESULT_BENCH-006.md  RESULT_BENCH-014.md  RESULT_BENCH-015.md  RESULT_BENCH024.md  RESULT_OPT-003.md  RESULT_OPT-005.md  (+14 more)
.cargo/: config.toml
benches/: bench_rabitq_recall.rs  cpp_faiss_simd_bench.rs  elkan_kmeans_bench.rs  rhtsdg_bench.rs
benchmark_results/: baseline_p3_001_methodology_gap.json  baseline_p3_001_same_schema_hnsw_hdf5.json  baseline_p3_001_stop_go_verdict.json  cross_dataset_sampling.json  diskann_milvus_rs_2026-04-07.md  diskann_milvus_rs_2026-04-08.md  diskann_native_milvus_2026-04-07.md  diskann_p3_004_benchmark_gate.json  diskann_p3_004_final_verdict.json  final_core_path_classification.json  final_performance_leadership_proof.json  final_production_acceptance.json  hnsw_bitset_search_cost_diagnosis.json  hnsw_core_rewrite_baseline_lock.json  hnsw_core_rewrite_decision_gate.json  hnsw_fairness_gate.json  hnsw_graph_diagnosis_rust.json  hnsw_p1_001_after.remote.json  hnsw_p1_001_compare.json  hnsw_p3_002_final_verdict.json  hnsw_reopen_baseline.json  hnsw_reopen_candidate_search_profile_round2.json  hnsw_reopen_distance_compute_profile_round3.json  hnsw_reopen_layer0_flat_graph_audit_round7.json  hnsw_reopen_layer0_prefetch_audit_round6.json  hnsw_reopen_layer0_searcher_audit_round4.json  hnsw_reopen_layer0_slab_audit_round10.json  hnsw_reopen_parallel_build_audit_round8.json  hnsw_reopen_profile_round1.json  hnsw_reopen_round10_authority_summary.json  hnsw_reopen_round10_baseline.json  hnsw_reopen_round11_authority_summary.json  hnsw_reopen_round11_baseline.json  hnsw_reopen_round12_authority_summary.json  hnsw_reopen_round12_baseline.json  hnsw_reopen_round2_authority_summary.json  hnsw_reopen_round2_baseline.json  hnsw_reopen_round3_authority_summary.json  hnsw_reopen_round3_baseline.json  hnsw_reopen_round4_authority_summary.json  (+21 more)
docs/: 2026-04-08-pca-indexes-milvus-integration.md  AISAQ_DESIGN.md  EVALUATION_KNOWHERE_RS_vs_CPP.md  FFI_CAPABILITY_MATRIX.md  HANNS_INTEGRATION_DESIGN.md  HVQ_TWO_STAGE_DESIGN.md  ISSUE-AISAQ-BUILD-PARALLELIZATION.md  ISSUE-AISAQ-SAVELOAD-COMPAT.md  ISSUE-FFI-INDEX-TYPE-COVERAGE.md  ISSUE-FFI-SEARCH-CONTRACT-GAPS.md  ISSUE-HNSW-COSINE-SEARCH-OVERHEAD.md  ISSUE-HNSW-HANNSDB-VS-ZVEC-QPS-GAP.md  ISSUE-HNSW-LEVEL-SAMPLING.md  ISSUE-HVQ-NATIVE-REGISTRY-GAP.md  ISSUE-IVF-FLAT-PARITY-GAP.md  ISSUE-IVF-RANGESEARCH-COVERAGE.md  ISSUE-IVFSQ8-BITSET-AND-SEARCH-SEMANTICS.md  ISSUES.md  PARITY_AUDIT.md  PERF_P3_004_NATIVE_HARNESS.md  diskann_capability_closure_plan.md  milvus-vectordbbench-authority-runbook.md  milvus_hnsw_concurrency_model.md  (+2 more)
(+573 files in other folders)
