[package]
name = "knowhere-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[features]
default = ["parallel"]
parallel = ["rayon"]
ffi = []
faiss-cxx = ["ffi", "cxx"]
jni-bindings = ["jni"]
python = ["pyo3", "numpy"]
simd = ["wide"]
hdf5 = ["dep:hdf5", "dep:ndarray"]
scann = []
std-f16 = []
async-io = ["io-uring"]
long-tests = []

[dependencies]
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
memmap2 = "0.9"
rayon = { version = "1.8", optional = true }
parking_lot = "0.12"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
bytemuck = "1.15"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
cxx = { version = "1.0", optional = true }
jni = { version = "0.21", optional = true }
pyo3 = { version = "0.22", optional = true, features = ["extension-module"] }
numpy = { version = "0.22", optional = true }
wide = { version = "0.7", optional = true }
libc = "0.2"
hdf5 = { version = "0.8", optional = true }
ndarray = { version = "0.15", optional = true }
io-uring = { version = "0.6", optional = true }

[lib]
name = "knowhere_rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "knowhere-cli"
path = "src/bin/cli.rs"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.3"
hdrhistogram = "7.5"

[[bench]]
name = "elkan_kmeans_bench"
harness = false

[[bench]]
name = "cpp_faiss_simd_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1

